Support blocking shrink when lowering model concurrency
